--- a/css/ic.css
+++ b/css/ic.css
@@ -19,6 +19,20 @@
     height: 30px;
 }
 
+.chordBoxButton {
+    width: 70px;
+    height: 30px;
+    background-color: rgb(211, 238, 238);
+    color: #000000;
+}
+
+#chordBox {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 20px;
+}
+
 #settings {
     margin-top: 10px;
     padding: 2px;
