各調のダイアトニックコードが表示されるように機能追加

--- a/css/ic.css
+++ b/css/ic.css
@@ -30,7 +30,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin-top: 20px;
+    margin: 20px 0px 20px 0px;
 }
 
 #settings {
