--- a/css/ic.css
+++ b/css/ic.css
@@ -43,6 +43,13 @@ body {
     margin: 20px 0px 20px 0px;
 }
 
+#controlPanelBox {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px 0px 20px 0px;
+}
+
 #settings {
     margin-top: 10px;
     padding: 2px;
