--- a/css/ic.css
+++ b/css/ic.css
@@ -36,6 +36,10 @@ body {
     background-color: #0366D6;
 }
 
+.selectedScaleColor {
+    background-color: gold;
+}
+
 #chordBox {
     display: flex;
     align-items: center;
@@ -63,7 +67,7 @@ body {
     margin: 20px 0px 20px 0px;
 }
 
-#chordProgression{
+#chordProgression {
     font-size: 16px;
     max-width: 60%;
 }
